--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                             <transformers>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>bot.BulliEars</mainClass>
+                                    <mainClass>bot.BuliEars</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
